[gd_scene load_steps=3 format=2]

[ext_resource path="res://games/pawn_game/ui/map_editor/map_editor.gd" type="Script" id=1]
[ext_resource path="res://games/pawn_game/ui/map_editor/tile_buttons/tile_buttons.tscn" type="PackedScene" id=2]

[node name="map_editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tile_buttons" parent="." instance=ExtResource( 2 )]
margin_top = -80.0
margin_bottom = -30.0

[node name="save_load" type="HBoxContainer" parent="."]
visible = false
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_button" type="Button" parent="save_load"]
margin_left = 917.0
margin_right = 958.0
margin_bottom = 45.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_button" type="Button" parent="save_load"]
margin_left = 962.0
margin_right = 1004.0
margin_bottom = 45.0
text = "Load"

[node name="save_file_dia" type="FileDialog" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
window_title = "Save map json"
resizable = true
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/Documents/Godot/Godot Projects/asaio-party/src"
current_path = "/Documents/Godot/Godot Projects/asaio-party/src/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_file_dia" type="FileDialog" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/Documents/Godot/Godot Projects/asaio-party/src"
current_path = "/Documents/Godot/Godot Projects/asaio-party/src/"

[connection signal="pressed" from="save_load/save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="save_load/load_button" to="." method="_on_load_button_pressed"]
[connection signal="file_selected" from="save_file_dia" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="load_file_dia" to="." method="_on_load_file_dia_file_selected"]
